Bug 283883 - The word "ungrouped" in group model is not translated
Summary: The word "ungrouped" in group model is not translated
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: common-internals (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks: 282193
  Show dependency treegraph
 
Reported: 2011-10-12 21:13 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-10-12 21:13:20 UTC
It should be.
Comment 1 Martin Klapetek 2011-10-24 15:27:47 UTC
Git commit 8897c19ba907015b4a0aebbb2f353408fe4f9dcc by Martin Klapetek.
Committed on 24/10/2011 at 17:27.
Pushed by mklapetek into branch 'master'.

Use i18n for 'Ungrouped' group

BUG: 283883

M  +13   -4    models/groups-model.cpp

http://commits.kde.org/telepathy-common-internals/8897c19ba907015b4a0aebbb2f353408fe4f9dcc