Use i18n for 'Ungrouped' group

BUG: 283883